fixed an error statement overlap

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body{
 
 .form-control.error small {
 	visibility: visible;
+    position: relative;
 }
 
 .form button {
